--- a/solana-gif-backend/Anchor.toml
+++ b/solana-gif-backend/Anchor.toml
@@ -1,11 +1,11 @@
-[programs.localnet]
+[programs.devnet]
 solana_gif_backend = "Fg6PaFpoGXkYsidMpWTK6W2BeZ7FEfcYkg476zPFsLnS"
 
 [registry]
 url = "https://anchor.projectserum.com"
 
 [provider]
-cluster = "localnet"
+cluster = "devnet"
 wallet = "/home/saurabhsrivastava/.config/solana/id.json"
 
 [scripts]
